another_LL_test/grammar.txt

//program and statements
program: declaration+ EOF
declaration: funDecl
funDecl: "fn" IDENTIFIER "(" params? ")" ("->" dataType) block
paramas: IDENTIFIER ":" dataType ("," IDENTIFIER ":" dataType)*
block: "{" statement* "}"
statement: exprStatement | varDecl
exprStatement: expr ";"
varDecl: "let" IDENTIFIER (":" dataType)? ("=" expr)? ";" // for now keep data type and assignment mandatory

dataType: primitiveType | array_type
arrayType: "[" primitiveType ";" "]" //DO LATER, FOCUS ON PRIMITIVE

///////Expressions
expr: equality
logic_or: logic_and ( "||" logic_and )*
logic_and: bit_or ( "&&" bit_or )*
bit_or: bit_xor ( "|" bit_xor)*
bit_xor: bit_and ( "^" bit_and )*
bit_and:  equality ( "&" equality )*
equality: comparisom (("==" | "!=" ) comparison)*
comparison: shift ( ( ">" |  "<" | "<=" | ">="  ) shift )* ; //TODO rust doesn't seem to support chaining such as 6>3>1
shift: term ( ("<<" | ">>") term)*
term: factor ( '+' | '-' factor)*
factor: unary ('*' | '/' unary)*
unary: ( "!" | "-" ) unary
       | primary ;
call:  primary "(" arguments? ")";
arguments: expr ( "," expr )* ;
primary: NUMBER | '(' expr ')'
